--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
         <div class="skill">
             <div class="skillTitle">
-               <h1>Skill</h1>
+                <h1>Skill</h1>
             </div>
             <div class="cSharp">
                 <h4>C# – 3 years</h4>
@@ -88,14 +88,14 @@
                 </ul>
             </div>
             <div class="php">
-                <h4>PHP – half year</h4>
+                <h4>PHP</h4>
                 <ul>
                     <li>Laravel</li>
                     <li>composer</li>
                 </ul>
             </div>
             <div class="front-end">
-                <h4>Front-end – half year</h4>
+                <h4>Front-end</h4>
                 <ul>
                     <li>jQuery</li>
                     <li>javascript</li>
@@ -163,6 +163,7 @@
             <div class="others">
                 <h4>Others</h4>
                 <ul>
+                    <li>Clonezilla</li>
                     <li>Machining software： NCspeed</li>
                     <li>Computer graphics：Siemens NX、 SolidWorks</li>
                     <li>TOEIC(785)</li>
