新增作品影片

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
                             <li>Make the camera, Flir, and other parameter settings convenient.</li>
                             <li>Deal with some system's bugs.</li>
                         </ul>
+                        <li><strong>Video：</strong></li>
+                        <a href="https://drive.google.com/open?id=1B5YigAps7DgOCbrPCV9kFVSArUBifVkp">Camera Web UI</a>
                     </ul>
                     <p>Keyword：PHP、jQuery、Javascript、Python、C++</p>
                 </ul>
@@ -71,6 +73,10 @@
                                 simulation software much more stable.</li>
                             <li>Import the new packages to make it a little easier to manage in the TFS.</li>
                         </ul>
+                        <li><strong>Video：</strong></li>
+                        <a href="https://drive.google.com/open?id=1DBxVf94kRzHJS-02aXy8VI4mnBISL1SY">Seach and replace keypoint tool</a>、
+                        <a href="https://drive.google.com/file/d/1vIjiEYSaFtQvE_u5S1dC6mkXwctAB-Hr/view?usp=sharing">Cmm config setting tool</a>、
+                        <a href="https://drive.google.com/open?id=1bCnM18G9Ch0qnf-Bf7WOb6KlcDADffww">Read tool</a>
                     </ul>
                     <p>Keyword：C#、Windows Forms、NCspeed、Siemens NX、Team Foundation Server(TFS)</p>
                 </ul>
