修改書卷獎翻譯

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         <td>90.8(Ranking：8/90)</td>
                     </tr>
                     <tr>
-                        <td><strong>Presidential award once</strong></td>
+                        <td><strong>Dean's List Award once(top 11)</strong></td>
                     </tr>
                     <tr>
                         <td>Thesis：Study of Multi-layer Chips Packaging Design and Thermal Management for
@@ -210,7 +210,7 @@
                         <td>82.5(Ranking：7/61)</td>
                     </tr>
                     <tr>
-                        <td><strong>presidential award once</strong></td>
+                        <td><strong>Dean's List Award once(top 3)</strong></td>
                     </tr>
                     <tr>
                         <td>Project：Design and analysis of LED shadowless lights</td>
