新增使用工具putty

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                 <ul>
                     <li>XAMPP</li>
                     <li>Team Foundation Server(TFS)</li>
+                    <li>putty</li>
                 </ul>
             </div>
             <div class="language">
