--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <ul>
                             <li>Handle any about machining simulation issues like：deal with bugs, develop new
                                 requirements, communicate with software developer, Formtec, etc.</li>
-                            <li>Develop and deal with the tools embedded in NX.</li>
+                            <li>Customize and deal with the tools in NX.</li>
                             <li>Research and resolve the problems about TFS.</li>
                         </ul>
                         <li><strong>Contribution：</strong></li>
