新增照片分類工具

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
                         <ul>
                             <li>ETC project：</li>
                             <ul>
-                                <li>Improve the quality of the pictures from the camera.</li>
                                 <li>Develop the Web UI for connecting with the camera, Flir.</li>
+                                <li>Make tools to easily check and categorize the pictures</li>
+                                <li>Improve the quality of the pictures from the camera.</li>
                             </ul>
                             <li>Taichung Smart baseball project：</li>
                             <ul>
@@ -44,12 +45,13 @@
                         <li><strong>Contribution：</strong></li>
                         <ul>
                             <li>Make the camera, Flir, and other parameter settings convenient.</li>
+                            <li>Save tons of times to categorize the pictures</li>
                             <li>Deal with some system's bugs.</li>
                         </ul>
                         <li><strong>Video：</strong></li>
                         <a href="https://drive.google.com/open?id=1B5YigAps7DgOCbrPCV9kFVSArUBifVkp">Camera Web UI</a>
                     </ul>
-                    <p>Keyword：PHP、jQuery、Javascript、Python、C++</p>
+                    <p>Keyword：PHP、jQuery、Javascript、Python、C++、C#</p>
                 </ul>
                 <li>
                     <h3>CIMFORCE Jul. 2016 ~ Dec. 2018</h3>
