--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <li>Make the machining simulation much closer to the on-site situation.</li>
                             <li>Replan the data format and process to make it easy to recreate in the test computer.
                             </li>
-                            <li>Find a few issues(about 30) and create few new requirements to let the machining
+                            <li>Find a few issues(about 30) and create a few new requirements to let the machining
                                 simulation software much more stable.</li>
                             <li>Import the new packages to make it a little easier to manage in the TFS.</li>
                         </ul>
@@ -93,6 +93,7 @@
                 <ul>
                     <li>Windows Forms</li>
                     <li>.net framework</li>
+                    <li>NuGet</li>
                 </ul>
             </div>
             <div class="php">
@@ -144,8 +145,8 @@
             <div class="virtualMachine">
                 <h4>Virtual Machine</h4>
                 <ul>
-                    <li>Hyper-V</li>
                     <li>VMware</li>
+                    <li>Hyper-V</li>                  
                 </ul>
             </div>
             <div class="tools">
@@ -161,6 +162,7 @@
                 <ul>
                     <li>Python</li>
                     <li>C/C++</li>
+                    <li>Docker</li>
                 </ul>
             </div>
             <div class="os">
