--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                     <li>Windows Forms</li>
                     <li>.net framework</li>
                     <li>NuGet</li>
+                    <li>.net core(basic)</li>
                 </ul>
             </div>
             <div class="php">
