--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <li>Windows Forms</li>
                     <li>.net framework</li>
                     <li>NuGet</li>
-                    <li>.net core(basic)</li>
+                    <li>ASP.net core(basic)</li>
                 </ul>
             </div>
             <div class="php">
@@ -132,7 +132,7 @@
                 <h4>IDE</h4>
                 <ul>
                     <li>Visual Studio</li>
-                    <li>Visual Studal Code</li>
+                    <li>Visual Studio Code</li>
                     <li>Notepad++</li>
                 </ul>
             </div>
@@ -163,13 +163,14 @@
                 <ul>
                     <li>Python</li>
                     <li>C/C++</li>
-                    <li>Docker</li>
                 </ul>
             </div>
             <div class="os">
                 <h4>OS</h4>
                 <ul>
+                    <li>windows</li>
                     <li>ubuntu</li>
+                    <li>Docker</li>
                 </ul>
             </div>
             <div class="others">
