--- a/index.htm
+++ b/index.htm
@@ -13,6 +13,7 @@
     <div class="grid-container">
         <div class="personalInfo">
             <h1>Personal Information</h1>
+            <img id="QRCode"src="Public/Imgs/QRCode.jpg" alt="another CV">
             <ul>
                 <li>Name：<strong>Chia-Wei Chuang</strong></li>
                 <li>Phone：<strong>0937-797-752</strong></li>
