新增 Pictures Category 的影片

--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
     <div class="grid-container">
         <div class="personalInfo">
             <h1>Personal Information</h1>
-            <img id="QRCode"src="Public/Imgs/QRCode.jpg" alt="another CV">
+            <img id="QRCode" src="Public/Imgs/QRCode.jpg" alt="another CV">
             <ul>
                 <li>Name：<strong>Chia-Wei Chuang</strong></li>
                 <li>Phone：<strong>0937-797-752</strong></li>
@@ -50,7 +50,11 @@
                             <li>Deal with some system's bugs.</li>
                         </ul>
                         <li><strong>Video：</strong></li>
-                        <a href="https://drive.google.com/open?id=1B5YigAps7DgOCbrPCV9kFVSArUBifVkp">Camera Web UI</a>
+                        <a target="_blank" rel="noopener noreferrer"
+                            href="https://drive.google.com/open?id=1B5YigAps7DgOCbrPCV9kFVSArUBifVkp">Camera Web UI</a>、
+                        <a target="_blank" rel="noopener noreferrer"
+                            href="https://drive.google.com/file/d/14wwiM3wiCSQ1z7vqgf2Aczt17lUm2i4U/view?usp=sharing">Pictures
+                            Category</a>
                     </ul>
                     <p>Keyword：PHP、jQuery、Javascript、Python、C++、C#</p>
                 </ul>
@@ -77,11 +81,14 @@
                             <li>Import the new packages to make it a little easier to manage in the TFS.</li>
                         </ul>
                         <li><strong>Video：</strong></li>
-                        <a href="https://drive.google.com/open?id=1DBxVf94kRzHJS-02aXy8VI4mnBISL1SY">Seach and replace
+                        <a target="_blank" rel="noopener noreferrer"
+                            href="https://drive.google.com/open?id=1DBxVf94kRzHJS-02aXy8VI4mnBISL1SY">Seach and replace
                             keypoint tool</a>、
-                        <a href="https://drive.google.com/file/d/1vIjiEYSaFtQvE_u5S1dC6mkXwctAB-Hr/view?usp=sharing">Cmm
+                        <a target="_blank" rel="noopener noreferrer"
+                            href="https://drive.google.com/file/d/1vIjiEYSaFtQvE_u5S1dC6mkXwctAB-Hr/view?usp=sharing">Cmm
                             config setting tool</a>、
-                        <a href="https://drive.google.com/open?id=1bCnM18G9Ch0qnf-Bf7WOb6KlcDADffww">Read tool</a>
+                        <a target="_blank" rel="noopener noreferrer"
+                            href="https://drive.google.com/open?id=1bCnM18G9Ch0qnf-Bf7WOb6KlcDADffww">Read tool</a>
                     </ul>
                     <p>Keyword：C#、Windows Forms、NCspeed、Siemens NX、Team Foundation Server(TFS)</p>
                 </ul>
