技能修改及新增專案連結

--- a/index.htm
+++ b/index.htm
@@ -94,6 +94,22 @@
                 </ul>
             </ul>
         </div>
+        <div class="projectCode">
+            <h1>Project Code</h1>
+            <div>
+                <h2>C#</h2>
+                <ul>
+                    <li><a target="_blank" href="https://ccw0621.visualstudio.com/_git/SortOutData">Library</a></li>
+                    <li><a target="_blank" href="https://ccw0621.visualstudio.com/DotNetCore/_git/Training">.net core</a></li>
+                </ul>
+            </div>
+            <div>
+                <h2><a target="_blank" href="https://ccw0621.visualstudio.com/Python/_git/Tools">Python</a></h2>
+            </div>
+            <div>
+                <h2><a target="_blank" href="https://ccw0621.visualstudio.com/PHP/_git/HelloBlog">PHP</a></h2>
+            </div>
+        </div>
         <div class="skill">
             <div class="skillTitle">
                 <h1>Skill</h1>
@@ -105,6 +121,13 @@
                     <li>.net framework</li>
                     <li>NuGet</li>
                     <li>ASP.net core(basic)</li>
+                </ul>
+            </div>
+            <div class="python">
+                <h4>Python(basic)</h4>
+                <ul>
+                    <li>OpenCV</li>
+                    <li>Keras</li>
                 </ul>
             </div>
             <div class="php">
@@ -166,13 +189,7 @@
                     <li>XAMPP</li>
                     <li>Team Foundation Server(TFS)</li>
                     <li>putty</li>
-                </ul>
-            </div>
-            <div class="language">
-                <h4>Other Language(basic)</h4>
-                <ul>
-                    <li>Python</li>
-                    <li>C/C++</li>
+                    <li>Markdown</li>
                 </ul>
             </div>
             <div class="os">
