--- a/index.htm
+++ b/index.htm
@@ -34,8 +34,10 @@
                             <li>ETC project：</li>
                             <ul>
                                 <li>Develop the Web UI for connecting with the camera, Flir.</li>
-                                <li>Make tools to easily check and categorize the pictures</li>
+                                <li>Make tools to easily check and categorize the pictures.</li>
                                 <li>Improve the quality of the pictures from the camera.</li>
+                                <li>Use API to create the license plate detection and the license plate recognition PascalVOC training files.</li>
+                                <li>Use YOLOv4 to train the license plate detection model and the license plate recognition model.</li>
                             </ul>
                             <li>Taichung Smart baseball project：</li>
                             <ul>
@@ -46,8 +48,9 @@
                         <li><strong>Contribution：</strong></li>
                         <ul>
                             <li>Make the camera, Flir, and other parameter settings convenient.</li>
-                            <li>Save tons of times to categorize the pictures</li>
+                            <li>Save tons of times to categorize the pictures.</li>
                             <li>Deal with some system's bugs.</li>
+                            <li>The license plate recognition is up to 95%.</li>
                         </ul>
                         <li><strong>Video：</strong></li>
                         <a target="_blank" rel="noopener noreferrer"
