--- a/index.htm
+++ b/index.htm
@@ -42,7 +42,7 @@
                             <li>Taichung Smart baseball project：</li>
                             <ul>
                                 <li>Install and test the system.</li>
-                                <li>Check and handle with hardware and software issues.</li>
+                                <li>Check and handle hardware and software issues.</li>
                             </ul>
                         </ul>
                         <li><strong>Contribution：</strong></li>
@@ -69,10 +69,10 @@
                     <ul>
                         <li><strong>Task：</strong></li>
                         <ul>
-                            <li>Handle any about machining simulation issues like：deal with bugs, develop new
+                            <li>Handle any machining simulation issues like：deal with bugs, develop new
                                 requirements, communicate with software developer, Formtec, etc.</li>
                             <li>Customize and deal with the tools based on NX.</li>
-                            <li>Research and resolve the problems about TFS.</li>
+                            <li>Research and resolve the problems of TFS.</li>
                         </ul>
                         <li><strong>Contribution：</strong></li>
                         <ul>
