新增中文履歷

--- a/Chinese.htm
+++ b/Chinese.htm
@@ -5,101 +5,99 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Chia-Wei Chuang Resume</title>
+    <title>Chia-Wei Chuang 的履歷</title>
     <link rel="stylesheet" href="Public/Css/style.css">
+    <style>
+        body{
+            font-family:'DFKai-sb','Times New Roman', Times, serif;
+        }
+    </style>
 </head>
 
 <body>
     <div class="grid-container">
         <div class="personalInfo">
-            <a href="Chinese.htm"><h2>Chinese CV</h2></a>
-            <h1>Personal Information</h1>
-            <img id="QRCode" src="Public/Imgs/QRCode.jpg" alt="another CV">
+            <a href="index.htm"><h2>英文履歷連結</h2></a>
+            <h1>個人資訊</h1>
             <ul>
-                <li>Name：<strong>Chia-Wei Chuang</strong></li>
-                <li>Phone：<strong>0937-797-752</strong></li>
-                <li>Email：<strong>amos6572@gmail.com</strong></li>
+                <li>名字：<strong>Chia-Wei Chuang</strong></li>
+                <li>手機：<strong>0937-797-752</strong></li>
+                <li>信箱：<strong>amos6572@gmail.com</strong></li>
             </ul>
         </div>
         <div class="experience">
-            <h1>Experience</h1>
+            <h1>工作經驗</h1>
             <ul>
                 <li>
-                    <h3>FEI Jul. 2019 ~ present</h3>
+                    <h3>FEI 2019/07 ~ 至今</h3>
                 </li>
                 <ul>
-                    <li><strong>Programer：Software development</strong></li>
+                    <li><strong>程式設計師：軟體開發</strong></li>
                     <ul>
-                        <li><strong>Task：</strong></li>
+                        <li><strong>任務：</strong></li>
                         <ul>
-                            <li>ETC project：</li>
+                            <li>ETC 專案：</li>
                             <ul>
-                                <li>Develop the Web UI for connecting with the camera, Flir.</li>
-                                <li>Make tools to easily check and categorize the pictures.</li>
-                                <li>Improve the quality of the pictures from the camera.</li>
-                                <li>Use API to create the license plate detection and the license plate recognition PascalVOC training files.</li>
-                                <li>Use YOLOv4 to train the license plate detection model and the license plate recognition model.</li>
+                                <li>開發網頁介面並與 Flir 相機連接。</li>
+                                <li>製作應用程式工具可以輕鬆檢查和分類照片。</li>
+                                <li>透過程式改善照片的品質。</li>
+                                <li>透過 API 產生車牌偵測和車牌辨識的 PascalVOC 檔案。</li>
+                                <li>使用 YOLOv4 訓練並產生車牌偵測和車牌辨識的模型。</li>
                             </ul>
-                            <li>Taichung Smart baseball project：</li>
+                            <li>台中智慧球場專案：</li>
                             <ul>
-                                <li>Install and test the system.</li>
-                                <li>Check and handle hardware and software issues.</li>
+                                <li>安裝軟體與測試系統。</li>
+                                <li>處理硬體與軟體的 bug。</li>
                             </ul>
                         </ul>
-                        <li><strong>Contribution：</strong></li>
+                        <li><strong>貢獻：</strong></li>
                         <ul>
-                            <li>Make the camera, Flir, and other parameter settings convenient.</li>
-                            <li>Save tons of times to categorize the pictures.</li>
-                            <li>Deal with some system's bugs.</li>
-                            <li>The license plate recognition is up to 95%.</li>
+                            <li>使得 Flir 相機的參數設定及其他設定配置更方便。</li>
+                            <li>在分類照片節省許多時間。</li>
+                            <li>解決系統上的 Bug。</li>
+                            <li>車牌辨識準確率高達95%。</li>
                         </ul>
-                        <li><strong>Video：</strong></li>
+                        <li><strong>影片：</strong></li>
                         <a target="_blank" rel="noopener noreferrer"
-                            href="https://drive.google.com/open?id=1B5YigAps7DgOCbrPCV9kFVSArUBifVkp">Camera Web UI</a>、
+                            href="https://drive.google.com/open?id=1B5YigAps7DgOCbrPCV9kFVSArUBifVkp">相機網頁介面</a>、
                         <a target="_blank" rel="noopener noreferrer"
-                            href="https://drive.google.com/file/d/14wwiM3wiCSQ1z7vqgf2Aczt17lUm2i4U/view?usp=sharing">Pictures
-                            Category</a>
+                            href="https://drive.google.com/file/d/14wwiM3wiCSQ1z7vqgf2Aczt17lUm2i4U/view?usp=sharing">照片分類工具</a>
                     </ul>
-                    <p>Keyword：PHP、jQuery、Javascript、Python、C++、C#</p>
+                    <p>關鍵字：PHP、jQuery、Javascript、Python、C++、C#</p>
                 </ul>
                 <li>
-                    <h3>CIMFORCE Jul. 2016 ~ Dec. 2018</h3>
+                    <h3>CIMFORCE 2016/7 ~ 2018/12</h3>
                 </li>
                 <ul>
-                    <li><strong>Software Engineer：System development and maintain</strong></li>
+                    <li><strong>軟體工程師：系統開發與維護</strong></li>
                     <ul>
-                        <li><strong>Task：</strong></li>
+                        <li><strong>任務：</strong></li>
                         <ul>
-                            <li>Handle any machining simulation issues like：deal with bugs, develop new
-                                requirements, communicate with software developer, Formtec, etc.</li>
-                            <li>Customize and deal with the tools based on NX.</li>
-                            <li>Research and resolve the problems of TFS.</li>
+                            <li>處理機台模擬相關問題，如：bug 處理、新需求開發、與模擬軟體開發商(NCspeed)溝通問題等。</li>
+                            <li>在 Siemens 繪圖軟體 NX 上進行客製化的工具的2次開發。</li>
+                            <li>研究和解決 TFS 上發生的問題。</li>
                         </ul>
-                        <li><strong>Contribution：</strong></li>
+                        <li><strong>貢獻：</strong></li>
                         <ul>
-                            <li>Make the machining simulation much closer to the on-site situation.</li>
-                            <li>Replan the data format and process to make it easy to recreate in the test computer.
-                            </li>
-                            <li>Find a few issues(about 30) and create a few new requirements to let the machining
-                                simulation software much more stable.</li>
-                            <li>Import the new packages to make it a little easier to manage in the TFS.</li>
+                            <li>使機台加工模擬結果更貼近現場加工的狀況。</li>
+                            <li>重新規劃資料格式，並進行軟體流程重構使系統更穩定和 Bug 容易在測試電腦重現。</li>
+                            <li>發現約 30 個機台加工模擬(NCspeed)的 Bug 並提出部分新需求讓機台模擬軟體功能更穩定和完善。</li>
+                            <li>導入新套件讓在 TFS 上管理更方便。</li>
                         </ul>
-                        <li><strong>Video：</strong></li>
+                        <li><strong>影片：</strong></li>
                         <a target="_blank" rel="noopener noreferrer"
-                            href="https://drive.google.com/open?id=1DBxVf94kRzHJS-02aXy8VI4mnBISL1SY">Seach and replace
-                            keypoint tool</a>、
+                            href="https://drive.google.com/open?id=1DBxVf94kRzHJS-02aXy8VI4mnBISL1SY">關鍵字尋找和取代工具</a>、
                         <a target="_blank" rel="noopener noreferrer"
-                            href="https://drive.google.com/file/d/1vIjiEYSaFtQvE_u5S1dC6mkXwctAB-Hr/view?usp=sharing">Cmm
-                            config setting tool</a>、
+                            href="https://drive.google.com/file/d/1vIjiEYSaFtQvE_u5S1dC6mkXwctAB-Hr/view?usp=sharing">三次元量測配置設定工具</a>、
                         <a target="_blank" rel="noopener noreferrer"
-                            href="https://drive.google.com/open?id=1bCnM18G9Ch0qnf-Bf7WOb6KlcDADffww">Read tool</a>
+                            href="https://drive.google.com/open?id=1bCnM18G9Ch0qnf-Bf7WOb6KlcDADffww">閱讀工具</a>
                     </ul>
                     <p>Keyword：C#、Windows Forms、NCspeed、Siemens NX、Team Foundation Server(TFS)</p>
                 </ul>
             </ul>
         </div>
         <div class="projectCode">
-            <h1>Project Code</h1>
+            <h1>專案原始碼</h1>
             <div>
                 <h2>C#</h2>
                 <ul>
@@ -116,7 +114,7 @@
         </div>
         <div class="skill">
             <div class="skillTitle">
-                <h1>Skill</h1>
+                <h1>技能</h1>
             </div>
             <div class="cSharp">
                 <h4>C# – 3 years</h4>
@@ -142,7 +140,7 @@
                 </ul>
             </div>
             <div class="front-end">
-                <h4>Front-End</h4>
+                <h4>前端</h4>
                 <ul>
                     <li>jQuery</li>
                     <li>javascript</li>
@@ -151,7 +149,7 @@
                 </ul>
             </div>
             <div class="database">
-                <h4>Database</h4>
+                <h4>資料庫</h4>
                 <ul>
                     <li>MS SQL</li>
                     <li>MySQL</li>
@@ -159,7 +157,7 @@
                 </ul>
             </div>
             <div class="dataExchange">
-                <h4>Data Exchange</h4>
+                <h4>資料交換格式</h4>
                 <ul>
                     <li>JSON</li>
                     <li>XML</li>
@@ -174,21 +172,21 @@
                 </ul>
             </div>
             <div class="versionControl">
-                <h4>Version Control</h4>
+                <h4>版本控管</h4>
                 <ul>
                     <li>Team Foundation Version Control</li>
                     <li>git</li>
                 </ul>
             </div>
             <div class="virtualMachine">
-                <h4>Virtual Machine</h4>
+                <h4>虛擬機軟體</h4>
                 <ul>
                     <li>VMware</li>
                     <li>Hyper-V</li>
                 </ul>
             </div>
             <div class="tools">
-                <h4>Tools</h4>
+                <h4>其他工具</h4>
                 <ul>
                     <li>XAMPP</li>
                     <li>Team Foundation Server(TFS)</li>
@@ -197,7 +195,7 @@
                 </ul>
             </div>
             <div class="os">
-                <h4>OS(basic)</h4>
+                <h4>作業系統(basic)</h4>
                 <ul>
                     <li>windows</li>
                     <li>ubuntu</li>
@@ -205,7 +203,7 @@
                 </ul>
             </div>
             <div class="others">
-                <h4>Others</h4>
+                <h4>其他項</h4>
                 <ul>
                     <li>Clonezilla</li>
                     <li>Machining software： NCspeed</li>
@@ -216,23 +214,22 @@
             </div>
         </div>
         <div class="education">
-            <h1>Education</h1>
+            <h1>教育背景</h1>
             <div id="gratuated">
                 <table>
                     <tr>
                         <td>
-                            M.S.：National Chiao Tung University Master of Mechanical
+                            碩士：國立交通大學 機械工程學系研究所控制組
                         </td>
                     </tr>
                     <tr>
-                        <td>90.8(Ranking：8/90)</td>
+                        <td>90.8(畢業排名：8/90)</td>
                     </tr>
                     <tr>
-                        <td><strong>Dean's List Award once(top 11)</strong></td>
+                        <td><strong>書卷獎(第11名)</strong></td>
                     </tr>
                     <tr>
-                        <td>Thesis：Study of Multi-layer Chips Packaging Design and Thermal Management for
-                            Green Power Electronics Device</td>
+                        <td>論文：綠能功率電子元件複層多晶片模組構裝設計與熱管理研究</td>
                     </tr>
                 </table>
             </div>
@@ -241,17 +238,17 @@
                 <table>
                     <tr>
                         <td>
-                            B.S.：National Central University Bachelor of Mechanical
+                            學士：國立中央大學 機械工程學系光機電工程組
                         </td>
                     </tr>
                     <tr>
-                        <td>82.5(Ranking：7/61)</td>
+                        <td>82.5(畢業排名：7/61)</td>
                     </tr>
                     <tr>
-                        <td><strong>Dean's List Award once(top 3)</strong></td>
+                        <td><strong>書卷獎(第3名)</strong></td>
                     </tr>
                     <tr>
-                        <td>Project：Design and analysis of LED shadowless lights</td>
+                        <td>專題：LED無影工作燈的設計與分析</td>
                     </tr>
                 </table>
             </div>
