--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@
                     <h3>FEI Jul. 2019 ~ present</h3>
                 </li>
                 <ul>
-                    <li><strong>Programer：Software development</strong></li>
+                    <li><strong>Programmer：Software development</strong></li>
                     <ul>
                         <li><strong>Task：</strong></li>
                         <ul>
