--- a/index.htm
+++ b/index.htm
@@ -119,16 +119,15 @@
                 <h1>Skill</h1>
             </div>
             <div class="cSharp">
-                <h4>C# – 3 years</h4>
+                <h4>C#</h4>
                 <ul>
                     <li>Windows Forms</li>
-                    <li>.net framework</li>
+                    <li>ASP.net core</li>
                     <li>NuGet</li>
-                    <li>ASP.net core(basic)</li>
                 </ul>
             </div>
             <div class="python">
-                <h4>Python(basic)</h4>
+                <h4>Python</h4>
                 <ul>
                     <li>OpenCV</li>
                     <li>Keras</li>
